exports[`Navigation composes its children 1`] = `
<button
  className="one"
  onClick={[Function]}>
  One
</button>
`;

exports[`Navigation composes its children 2`] = `
<button
  className="two"
  onClick={[Function]}>
  Two
</button>
`;

exports[`Navigation renders correctly 1`] = `
<styled.nav
  activeIndex={-1} />
`;
